--- a/rapport/kibana.tex
+++ b/rapport/kibana.tex
@@ -176,9 +176,11 @@ Partie non essentielle sur les \textbf{settings} p\pageref{subsec:settings}
 \section{Conclusion}
 Voici qui conclut la présentation des logiciels majeurs que nous avons
 utilisés pour réaliser ce projet. Nous avons maintenant compris comment
-centraliser et exporter les données, les ranger et maintenant les consulter
+centraliser et exporter les données, les ranger et maintenant les consulter.
 
-Kibana est sans doute le plus facile des trois  à prendre en main, et c'est heureux 
-car c'est celui avec lequel l'équipe interagira au quotidien.
+%Kibana est sans doute le plus facile des trois  à prendre en main, et c'est heureux 
+%car c'est celui avec lequel l'équipe interagira au quotidien.
 
-Kibana facilite beaucoup l'exploration de données et permet, par l'intermédiaire des Dashboard,  de faciliter leur mise en corrélation.
+Kibana facilite beaucoup l'exploration de données et permet, par l'intermédiaire 
+des Dashboard,  de faciliter leur mise en corrélation. Ce logiciel peut facilement
+être utilisé par tous avec très peu de formation.
